[tool.poetry]
name = "suburi-nlp-imbalanced"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ginza = "^5.0"
spacy = "3.1.4"
tensorflow = "^2.5"
numpy = "1.19.5"
pandas = "^1.2"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
